alpine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpine
  name: alpine
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      nodeName: microk8s-02
      terminationGracePeriodSeconds: 1
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: airflow-dags
      containers:
      - name: alpine
        image: alpine
        command:
          - sh
          - -c
          - |
            set -ex
            df -h /mnt
            exec sleep infinity
        volumeMounts:
        - name: airflow-dags
          mountPath: /mnt
        securityContext:
          runAsUser: 1000
          runAsGroup: 0
