airflow.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  namespace: airflow
  labels:
    app: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: airflow-dags
      - name: airflow-logs
        persistentVolumeClaim:
          claimName: airflow-logs
      serviceAccountName: airflow
      containers:
      - name: webserver
        image: localhost:32000/airflow:2.0
        imagePullPolicy: IfNotPresent
        command: ["airflow","webserver"]
        volumeMounts:
        - name: airflow-dags
          mountPath: /opt/airflow/dags
        - name: airflow-logs
          mountPath: /opt/airflow/logs
        securityContext:
          runAsGroup: 0
      - name: scheduler
        image: localhost:32000/airflow:2.0
        imagePullPolicy: IfNotPresent
        command: ["airflow","scheduler"]
        volumeMounts:
        - name: airflow-dags
          mountPath: /opt/airflow/dags
        - name: airflow-logs
          mountPath: /opt/airflow/logs
        securityContext:
          runAsGroup: 0
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: airflow-dags
      - name: airflow-logs
        persistentVolumeClaim:
          claimName: airflow-logs
      # imagePullSecrets:
      # - name: airflow-ocir-secret
---
apiVersion: v1
kind: Service
metadata:
  name: airflow
  namespace: airflow
spec:
  type: NodePort
  #type: LoadBalancer
  ports:
    - port: 8080
  selector:
    app: airflow
